Release/v2.0.0 (#63)
* Update application to adapt to the new Broker Adapter version

* Update GitHub Actions
Refactor Application

* Fix default subscriptions and calls

* hotfix/v2.0.0-1 (#43)

* hotfix/v2.0.0-1

* Updated hotfix/v2.0.0-1

CHANGE: Fixed a test

* Updated hotfix/v2.0.0-1

CHANGE:
Changed some methods to HttpUtils

* v2.0.0-1 Update

CHANGE:
Deleted unused imports
Refactored ScorpioNotification to BrokerNotification

* v2.0.0-1 Update

Deleted all old OrionLDNotification dependencies

* Update actions (#44)

* Oriolcanadesin2 patch 1 (#45)

* Create sonarcloud.yml

* Update README.md

* Update README.md (#46)

* Hotfix/v2.0.0 2 (#48)

* hotfix/v2.0.0-1

* Updated hotfix/v2.0.0-1

CHANGE: Fixed a test

* Updated hotfix/v2.0.0-1

CHANGE:
Changed some methods to HttpUtils

* v2.0.0-1 Update

CHANGE:
Deleted unused imports
Refactored ScorpioNotification to BrokerNotification

* v2.0.0-1 Update

Deleted all old OrionLDNotification dependencies

* Hotfix 2.0.0-2

CHANGE
Fixed hash prefix in order to work with DLT
Fixed checkIfDeleted, now does a real check instead of just checking the response message

* CHANGE:
Fixed tests.

* Add SonarCloud for code quality (#49)

* Feature/add sonarcloud (#55)

* Add SonarCloud for code quality

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Update SonarCloud configurations.

* Feature/add sonarcloud (#56)

*